@startuml

title __NOTE's Class Diagram__\n

  namespace com.example.pis_entrega1 {
    namespace Note {
      abstract class com.example.pis_entrega1.Note.Notes {
          - checked : boolean
          - date : String
          - id : String
          - name : String
          + Notes()
          + Notes()
          + Notes()
          {abstract} + delete()
          + getDate()
          + getID()
          + getName()
          + isChecked()
          {abstract} + saveNote()
          + setChecked()
          + setDate()
          + setID()
          + setName()
      }
    }
  }
  

  namespace com.example.pis_entrega1 {
    namespace Note {
      class com.example.pis_entrega1.Note.Photo {
          - address : String
          - url : String
          + Photo()
          + Photo()
          + Photo()
          + delete()
          + getAddress()
          + getUrl()
          + modify()
          + saveNote()
          + setAddress()
          + setUrl()
      }
    }
  }
  

  namespace com.example.pis_entrega1 {
    namespace Note {
      class com.example.pis_entrega1.Note.Recording {
          - address : String
          - url : String
          + Recording()
          + Recording()
          + Recording()
          + delete()
          + getAddress()
          + getUrl()
          + modify()
          + saveNote()
          + setAddress()
          + setUrl()
      }
    }
  }
  

  namespace com.example.pis_entrega1 {
    namespace Note {
      class com.example.pis_entrega1.Note.Text {
          - text : String
          + Text()
          + Text()
          + Text()
          + delete()
          + getText()
          + modify()
          + saveNote()
          + setText()
      }
    }
  }
  

  com.example.pis_entrega1.Note.Photo -up-|> com.example.pis_entrega1.Note.Notes
  com.example.pis_entrega1.Note.Photo o-- com.example.pis_entrega1.Model.DatabaseAdapter : adapter
  com.example.pis_entrega1.Note.Recording -up-|> com.example.pis_entrega1.Note.Notes
  com.example.pis_entrega1.Note.Recording o-- com.example.pis_entrega1.Model.DatabaseAdapter : adapter
  com.example.pis_entrega1.Note.Text -up-|> com.example.pis_entrega1.Note.Notes
  com.example.pis_entrega1.Note.Text o-- com.example.pis_entrega1.Model.DatabaseAdapter : adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
